# snake_with_RL

./: .gitignore
results/: action_history.txt  qtable_output.txt
src/: CMakeLists.txt  best_biases.txt  best_biases_two.txt  best_weights.txt  best_weights_two.txt  build_instructions.txt  compile.bat  main.cpp
src/include/: dqn.h  file_reader.h  game.h  game_params.h  layer.h  network_params.h  neural_network.h
src/src/: dqn.cpp  file_reader.cpp  game.cpp  layer.cpp  main.cpp  neural_network.cpp
src/standard_compile/: compile.bat
src/standard_compile/include/: dqn.h  game.h  game_params.h  layer.h  network_params.h  neural_network.h  random_generator.h
src/standard_compile/src/: compile_test.bat  dqn.cpp  game.cpp  layer.cpp  main.cpp  neural_network.cpp  random_generator.cpp
